--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.0.9",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-sound": "^0.11.2"
